<resources>
    <string name="app_name">My Application</string>
    <string name="profile">Profil</string>
    <string name="nama">Nama :</string>
    <string name="tanggal_lahir">Tanggal Lahir :</string>
    <string name="jenis_kelamin">Jenis Kelamin :</string>
    <string name="status">Status :</string>
    <string name="hobi">Hobi :</string>
    <string name="pembayaran">Pembayaran</string>
    <string name="pengaturan">Pengaturan</string>
    <string name="notifikasi">Notifikasi</string>
    <string name="edit_profile">Edit Profil</string>
    <string name="namaform">Nama</string>
    <string name="alamat">Alamat</string>
    <string name="nomor_hp">Nomor HP</string>
    <string name="agama">Agama</string>
    <string name="jenis_kelaminform">Jenis Kelamin</string>
    <string name="perempuan">Perempuan</string>
    <string name="laki">Laki-laki</string>
    <string name="hobiform">Hobi</string>
    <string name="membaca">Membaca</string>
    <string name="menulis">Menulis</string>
    <string name="olahraga">Olahraga</string>
    <string name="makan">Makan</string>
    <string name="simpan">Simpan</string>
    <string name="kalkulator">Kalkulator</string>
    <string name="keluar">Keluar</string>
    <string name="konversi_suhu">Konversi Suhu</string>
    <string name="masukkan_nama_pembeli">Masukkan Nama Pembeli</string>
    <string name="pesan">Pesan</string>
    <string name="tunai">Tunai</string>
    <string name="alamatform">Alamat :</string>
    <string name="nomor_hpform">Nomor HP :</string>
    <string name="agamaform">Agama :</string>
    <string name="text_exit">Apakah Anda yakin ingin keluar?</string>
    <string name="no">Tidak</string>
    <string name="suhu">Masukkan Suhu</string>
    <string name="hasilkonversi">Hasil Konversi</string>
    <string name="hasil_hitung_dan_rumus">Hasil Hitung dan Rumus :</string>
    <string name="rumus_digunakan">Rumus Digunakan:</string>
    <string name="formula_akan_muncul_di_sini">[Formula akan muncul di sini]</string>
    <string name="kembali">Kembali</string>
    <string name="hasil_form">Hasil Form</string>
</resources>