<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HasilForm">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="24dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hasil_form"
            android:textColor="@color/biru"
            android:fontFamily="sans-serif-condensed-medium"
            android:textSize="30sp"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="20dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"
            android:background="@drawable/bg_box">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="8dp"
                android:text="@string/nama"
                android:textColor="@color/biru"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/HasilNama"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginStart="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="8dp"
                android:text="@string/alamatform"
                android:textColor="@color/biru"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/HasilAlamat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginStart="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="8dp"
                android:text="@string/nomor_hpform"
                android:textColor="@color/biru"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/HasilNomor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginStart="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="8dp"
                android:text="@string/agamaform"
                android:textColor="@color/biru"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/HasilAgama"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginStart="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="8dp"
                android:text="@string/jenis_kelamin"
                android:textColor="@color/biru"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/HasilKelamin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginStart="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="8dp"
                android:text="@string/hobi"
                android:textColor="@color/biru"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/HasilHobi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginStart="10dp"/>
        </LinearLayout>

        <Button
            android:id="@+id/btnKembali"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/kembali"
            android:backgroundTint="@color/pinkTone"
            android:textColor="@color/biru"
            android:textStyle="bold"
            android:layout_marginTop="20dp"/>



    </LinearLayout>
</ScrollView>