<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".Menu">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Flavourlily"
        android:textColor="@color/biru"
        android:textStyle="bold"
        android:textSize="25dp"
        android:fontFamily="monospace"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="15dp"/>
    <EditText
        android:id="@+id/namaPembeli"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/masukkan_nama_pembeli"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"
        android:padding="12dp"
        android:background="@drawable/bg_box"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvMenu"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="12dp"
        android:scrollbars="vertical"/>

    <Button
        android:id="@+id/btnPesan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pesan"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:backgroundTint="@color/pinkTone"
        android:textColor="@color/biru"
        android:fontFamily="sans-serif-condensed-medium"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:padding="10dp"/>

    <RadioGroup
        android:id="@+id/rgPayment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="12dp">

        <RadioButton
            android:id="@+id/rbCash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tunai"
            android:checked="true"/>

        <RadioButton
            android:id="@+id/rbTransfer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Transfer"
            android:layout_marginStart="20dp"/>

        <RadioButton
            android:id="@+id/rbQris"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="QRIS"
            android:layout_marginStart="20dp"/>
    </RadioGroup>

</LinearLayout>